# SpeedTypeNow

long_text_server/: .env  Cargo.toml
long_text_server/migrations/2023-05-13-151425_long_text/: up.sql
long_text_server/src/: lib.rs  main.rs  models.rs  schema.rs
long_text_ui/: Cargo.toml  Trunk.toml  index.html
long_text_ui/src/: NetrwTreeListing  index.html  main.rs  models.rs
