[package]
name = "long_text_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
diesel = { version = "2.0.4", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.163", features = ["derive"] } 
