[package]
name = "long_text_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-logger = "0.2.0"
log = "0.4.6"
web-sys= "0.3.63"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.36"
js-sys = "0.3.63"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = "1.0.163"

